add fonts, fontawesome CDNs && add nav styling and div content

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,14 +5,15 @@
  */
 html {
   box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
 /*
- * Global layout stuff
- */
+* Global layout stuff
+*/
 
 body {
   color: #545149;
