--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,12 @@ body {
   font-size: 24px;
 }
 
+.container {
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
