--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,15 +5,14 @@
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   height: 400px;
-  width: 100vw;
+  width: 100%;
 }
 
 .user-info > div > h2 {
   margin: 0;
 }
 
-.user-info > span {
+.user-info > div > h2 > span {
   font-weight: 300;
 }
