--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,9 +5,10 @@
  */
 html {
   box-sizing: border-box;
-  font-family: 'Source Sans Pro', sans-serif;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -16,15 +17,15 @@ html {
 */
 
 body {
-  color: #545149;
   background-color: #f4f1ec;
+  color: #545149;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
 .container {
   width: 90%;
   margin: 0 auto;
-  text-align: center;
 }
 
 /*
