--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,4 +1,4 @@
-.tweet {
+article.tweet {
   border: 4px solid #545149;
   display: flex;
   flex-direction: column;
@@ -6,28 +6,28 @@
   padding: 8px;
 }
 
-.tweet:hover {
+article.tweet:hover {
   box-shadow: 5px 5px 0px rgba(64, 86, 161, 0.3);
 }
 
-.tweet > section {
+article.tweet > section {
   border-bottom: 4px solid #545149;
   padding: 0 1em 0 1em;
 }
 
-.tweet > header {
+article.tweet > header {
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 16px;
 }
 
-.tweet > header > div {
-  display: flex;
+article.tweet > header > div {
   align-items: center;
+  display: flex;
 }
 
-.username {
+span.username {
   margin-left: 0.5em;
 }
 
@@ -35,29 +35,29 @@
   height: 50px;
 }
 
-.tweeter-handle {
+span.tweeter-handle {
+  color: #4056a1;
   font-weight: 600;
   font-size: 18px;
   letter-spacing: 0.1px;
-  color: #4056a1;
   opacity: 0.3;
 }
 
-.tweet > footer {
+article.tweet > footer {
   display: flex;
   font-size: 16px;
   justify-content: space-between;
   padding: 12px 30px;
 }
 
-.btn-icon {
+button.btn-icon {
   border: none;
   color: #4056a1;
   font-size: 16px;
   transition: color 0.2s ease-in;
 }
 
-.btn-icon:hover {
+button.btn-icon:hover {
   color: #c26400;
   cursor: pointer;
 }
