--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,5 @@
+/* MAIN RULES */
+
 section.new-tweet {
   display: flex;
   justify-content: center;
@@ -5,6 +7,8 @@ section.new-tweet {
   align-items: center;
   margin-bottom: 2.5em;
 }
+
+/* FORM RULES */
 
 form {
   display: flex;
@@ -40,6 +44,8 @@ button.btn {
   color: white;
   padding: 0.3rem 0.8rem 0.3rem 0.8rem;
 }
+
+/* applied when textarea is invalid  */
 
 .error {
   color: red;
