--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -45,6 +45,16 @@ button.btn {
   padding: 0.3rem 0.8rem 0.3rem 0.8rem;
 }
 
+span#error-message {
+  background-color: red;
+  color: white;
+  font-family: 'Bungee', sans-serif, cursive;
+  text-align: center;
+  padding: 0.5rem 0 0.5rem 0;
+  border-radius: 0.5rem;
+  width: 50%;
+}
+
 /* applied when textarea is invalid  */
 
 .error {
