--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -45,14 +45,20 @@ button.btn {
   padding: 0.3rem 0.8rem 0.3rem 0.8rem;
 }
 
+button.btn:focus {
+  box-shadow: 0 0 0 4px rgba(64, 86, 161, 0.5);
+}
+
 span#error-message {
   background-color: red;
   color: white;
+  display: none;
   font-family: 'Bungee', sans-serif, cursive;
+  font-size: 1rem;
   text-align: center;
   padding: 0.5rem 0 0.5rem 0;
   border-radius: 0.5rem;
-  width: 50%;
+  width: 100%;
 }
 
 /* applied when textarea is invalid  */
