add display none to new-tweet section, add bottom margin to header

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,6 +2,7 @@
 
 section.new-tweet {
   display: flex;
+  display: none;
   justify-content: center;
   flex-direction: column;
   align-items: center;
