--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -49,14 +49,15 @@ button.btn:focus {
   box-shadow: 0 0 0 4px rgba(64, 86, 161, 0.5);
 }
 
-span#error-message {
+h3#error-message {
   background-color: red;
   color: white;
   display: none;
   font-family: 'Bungee', sans-serif, cursive;
   font-size: 1rem;
   text-align: center;
-  padding: 0.5rem 0 0.5rem 0;
+  padding: 0.75em 1em 0.75em 1em;
+  margin-bottom: 1em;
   border-radius: 0.5rem;
   width: 100%;
 }
