--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
@@ -15,11 +16,10 @@ html {
 /*
 * Global layout stuff
 */
-
 body {
   background-color: #f4f1ec;
   color: #545149;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
 }
 
@@ -31,51 +31,43 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- 
- @media only screen and (min-width: 1024px) {
-
-  nav {
-    height: 400px;
-    padding-top: 0;
+@media only screen and (min-width: 1024px) {
+  div > i.icon {
+    animation: none;
   }
 
-   div > i.icon {
-     animation: none;
-    }
-    
-    header.site-header {
-      float: left;
-      margin: 10em 0 0 5rem;
-      width: 25%;
-      min-width: 300px;
-    }
-    
-    main.container {
-      float: right;
-      margin: 10em 5rem 0 0;
-      width: 50%;
-    }
-    
-    main > section.new-tweet {
-      display: block;
-    }
+  header.site-header {
+    float: left;
+    margin: 10em 0 0 5rem;
+    width: 25%;
+    min-width: 300px;
   }
-  
-  @media only screen and (max-width: 1023px) {
-    body > nav {
-      background-color: transparent;
-    }
 
-    nav > img {
-      height: 200px;
-    }
-
-    header.site-header { 
-      padding-top: 140px;
-      height: 540px;
-    }
-
-    section.new-tweet > span#error-message {
-      font-size: 12px;
-    }
+  main.container {
+    float: right;
+    margin: 10em 5rem 0 0;
+    width: 50%;
   }
+
+  main > section.new-tweet {
+    display: block;
+  }
+}
+@media only screen and (max-width: 1023px) {
+  body > nav {
+    background-color: transparent;
+  }
+
+  nav > img {
+    height: 200px;
+  }
+
+  header.site-header {
+    padding-top: 140px;
+    height: 540px;
+  }
+
+  section.new-tweet > span#error-message {
+    font-size: 12px;
+  }
+}
