--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,5 +1,77 @@
-/*   MAIN ARTICLE TAG RULES    */
+/*
+ * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+ * https://css-tricks.com/international-box-sizing-awareness-day/
+ * Do not modify these two selectors, please
+ */
+html {
+  box-sizing: border-box;
+}
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/*
+* Global layout stuff
+*/
+body {
+  background-color: #f4f1ec;
+  color: #545149;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 24px;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+/*
+ * Additional CSS can be defined below or in other CSS files, as per instructions
+ */
+@media only screen and (min-width: 1024px) {
+  div > i.icon {
+    animation: none;
+  }
+
+  header.site-header {
+    float: left;
+    margin: 10em 0 0 5rem;
+    width: 25%;
+    min-width: 300px;
+  }
+
+  main.container {
+    float: right;
+    margin: 10em 5rem 0 0;
+    width: 50%;
+  }
+
+  main > section.new-tweet {
+    display: block;
+  }
+}
+@media only screen and (max-width: 1023px) {
+  body > nav {
+    background-color: transparent;
+  }
+
+  nav > img {
+    height: 200px;
+  }
+
+  header.site-header {
+    padding-top: 140px;
+    height: 540px;
+  }
+
+  section.new-tweet > span#error-message {
+    font-size: 12px;
+  }
+}
+/*   MAIN ARTICLE TAG RULES    */
 article.tweet {
   border: 4px solid #545149;
   display: flex;
@@ -18,7 +90,6 @@ article.tweet > section {
 }
 
 /*  HEADER RULES  */
-
 article.tweet > header {
   align-items: center;
   display: flex;
@@ -48,7 +119,6 @@ span.tweeter-handle {
 }
 
 /*  FOOTER RULES  */
-
 article.tweet > footer {
   display: flex;
   font-size: 16px;
