add scss variable for font weight

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -22,6 +22,10 @@ html {
 $primay-font: 'Source Sans Pro', sans-serif;
 $secondary-font: 'Bungee', sans-serif, cursive;
 
+//font-weight
+$bold-font: 600;
+$normal-font: 300;
+
 //font colours
 $font-primary: #545149;
 $font-highlight: #fff;
