--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -52,7 +52,7 @@ section.new-tweet {
      border: none;
      border-bottom: 4px solid layout.$border-primary;
      background-color: inherit;
-     font-size: 18px;
+     font-size: 1.1rem;
      font-weight: layout.$bold-font;
      outline: none;
      overflow-y: auto;
